Add proper typography for main page

--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -45,8 +45,7 @@
           <a
             class="text-reset link-without-underline"
             href="https://digitalbusiness.kz/2024-03-12/almatinets-sozdal-servis-dlya-sbora-dannih-o-zarplatah-kazahstanskih-aytishnikov/"
-            target="_blank"
-          >
+            target="_blank">
             Алматинец создал сервис для сбора информации о зарплатах
             казахстанских айтишников </a
           >, Digital Business, 13 марта 2024
@@ -152,7 +151,7 @@
       </div>
 
       <div class="mb-3 mt-5">
-        <div class="mb-1 h5">Солидному проекту - свой маскот</div>
+        <div class="mb-1 h5">Солидному проекту &mdash; свой маскот</div>
         <div class="mt-2">
           <div class="mb-2">
             Так как проект был разработан еще в 2021 году, тогда же я взял
@@ -160,14 +159,14 @@
             аккуратную. Сойдет.
           </div>
           <div class="mb-2">
-            С января 2024го года я добавил новый модуль - зарплаты. Теперь
+            С января 2024го года я добавил новый модуль &mdash; зарплаты. Теперь
             единственная картинка не отражает суть проекта, да и мало кто
             пользуется разделом заметок. Решил, что нужно искать новые картинки
             на сайт, а может даже и завести маскота проекта. Что ж, раз решил,
             значит нужно претворять в жизнь.
           </div>
           <div class="mb-2">
-            С весны у проекта теперь будет свой маскот - кот Магеллан.
+            С весны у проекта теперь будет свой маскот &mdash; кот Магеллан.
           </div>
           <div class="mb-2">
             Магеллан любит писать заметки, смотреть всякие графики, но больше
@@ -182,8 +181,7 @@
                 <img
                   src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cats/vexi_magellain.jpg"
                   class="img-fluid rounded"
-                  alt="Magellain and Vexi"
-                />
+                  alt="Magellain and Vexi" />
               </div>
               <div class="text-muted small">Магеллан и Векси вместе</div>
             </div>
@@ -192,8 +190,7 @@
                 <img
                   src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cats/magellain.jpg"
                   class="img-fluid rounded"
-                  alt="Magellain"
-                />
+                  alt="Magellain" />
               </div>
               <div class="text-muted small">Магеллан позирует для фото</div>
             </div>
@@ -203,8 +200,7 @@
                 <img
                   src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cats/vexi.jpg"
                   class="img-fluid rounded"
-                  alt="Vexi"
-                />
+                  alt="Vexi" />
               </div>
               <div class="text-muted small">
                 Векси делает вид, что не фоткается
