--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="">
-    <div class="text-muted">Медианная зарплата в локальных компаниях</div>
+    <div class="text-muted">Медианная зарплата в местных компаниях</div>
     <div>
       <span class="display-1 me-2">{{ median }}</span>
       <span class="h4 text-muted">тг.</span>
