--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -197,7 +197,7 @@
       >
         <div class="mb-5">
           <app-currency-select-box
-            [currencies]="salariesChart.currencies"
+            [chart]="salariesChart"
           ></app-currency-select-box>
         </div>
 
