--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h4 mb-3">Зарплаты по грейдам</div>
+  <div class="h4 mb-3">Зарплаты по грейдам в графике (тенге)</div>
 
   <div class="" *ngIf="canvasId">
     <div id="canvas-container">
