--- a/src/app/modules/salaries/components/salaries-chart/salaries-by-grade/salaries-by-grade-block.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-by-grade/salaries-by-grade-block.component.html
@@ -3,8 +3,8 @@
     <thead>
       <tr>
         <th scope="col">Грейд</th>
-        <th scope="col">Медианная, тг.</th>
-        <th scope="col">Средняя, тг.</th>
+        <th scope="col">Медианная, {{currentCurrencyLabel}}</th>
+        <th scope="col">Средняя, {{currentCurrencyLabel}}</th>
         <th scope="col">Кол-во анкет</th>
       </tr>
     </thead>
