--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
@@ -3,7 +3,7 @@
     <div class="text-muted">Медианная зарплата в местных компаниях</div>
     <div>
       <span class="display-1 me-2">{{ median }}</span>
-      <span class="h4 text-muted">тг.</span>
+      <span class="h4 text-muted">{{currentCurrencyLabel}}</span>
     </div>
   </div>
 
@@ -11,7 +11,7 @@
     <div class="text-muted">Средняя зарплата</div>
     <div class="">
       <span class="h3 me-2">{{ average }}</span>
-      <span class="h4">тг.</span>
+      <span class="h5 text-muted">{{currentCurrencyLabel}}</span>
     </div>
   </div>
 
@@ -19,7 +19,7 @@
     <div class="text-muted">Медианная на удаленке</div>
     <div class="">
       <span class="h3 me-2">{{ medianRemote }}</span>
-      <span class="h4">тг.</span>
+      <span class="h5 text-muted">{{currentCurrencyLabel}}</span>
     </div>
   </div>
 
@@ -27,7 +27,7 @@
     <div class="text-muted">Средняя на удаленке</div>
     <div class="">
       <span class="h3 me-2">{{ averageRemote }}</span>
-      <span class="h4">тг.</span>
+      <span class="h5 text-muted">{{currentCurrencyLabel}}</span>
     </div>
   </div>
 </div>
