--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -56,8 +56,8 @@
       <div class="mb-3 mt-5">
         <div class="mb-1 h5">История проекта</div>
         <div class="mt-2">
-          Меня зовут Максим, изначально я создавал платформу для ведения заметок
-          во время технических интервью.
+          Меня зовут Максим, я разработчик из Алматы. Изначально я создавал платформу для ведения заметок
+          во время технических интервью в далеком 2021 году.
         </div>
         <div class="mt-2">
           В 2021-2022 годах я активно проводил собеседования на основной работе,
@@ -75,8 +75,8 @@
           В 2024 году решил создать сервис по сбору статистики по зарплатам, и
           самым простым решением было разработать его на базе уже существующей
           платформы. Всегда интересовало, сколько получают коллеги в команде и
-          какие зарплаты предлагают другие компании. Но напрямую ведь не
-          спросишь ни у кого, какая у него зарплата. Сервисы по статистике - не
+          какие зарплаты предлагают другие компании, но напрямую ведь не
+          спросишь ни у кого. Сервисы по зарплатной статистике - не
           новинка: есть
           <a
             target="_blank"
@@ -99,15 +99,55 @@
           >. Можно было ориентироваться на эти цифры.
         </div>
         <div class="mt-2">
-          Тем не менее, подобного сервиса для казахстанских айтишников не было.
+          Тем не менее, такого же сервиса для казахстанских айтишников не было.
           Пару раз команда Kolesa group публиковали свои исследования
           <a
             target="_blank"
             class="text-reset"
             href="https://zerttey.kolesa.group"
             >Kolesa zerttey</a
-          >, однако это были временные кампании по сбору анкет. Хотелось видеть
-          актуальные зарплаты, и я решил создать такой сервис.
+          >, однако это были временные кампании по сбору анкет, 
+          а не сервис с постоянно пополняющейся статистикой. 
+          Мне хотелось видеть актуальные зарплаты на рынке, и я решил создать такой сервис.
+        </div>
+      </div>
+
+      <div class="mb-3 mt-5">
+        <div class="mb-1 h5">Концепция</div>
+        <div class="mt-2">
+          Концепция проекта: данные в обмен на данные - пользователь оставляет свою анкету, 
+          а потом получает доступ к агрегированным данным других пользователей. Таким образом 
+          поддерживается актуальность данных и увеличивается их объем.
+        </div>
+        <div class="mt-2">
+          <div>Не все анкеты попадают в  статистику. Отсеиваются алгоритмом:</div>
+          <ul>
+            <li>Данные стажеров (грейд Trainee)</li>
+            <li>Данные от специалистов не из IT. Например, эйчары вне IT.</li>
+            <li>Зарплаты, которые отклоняются более чем на 20% от максимальной/минимальной на момент заполнения.</li>
+            <li>Анкеты, где зарплата указана на уровне максимально/минимально возможного значения, которое поле пропускает.</li>
+          </ul>
+          <div>
+            Анкеты вне статистики отображены в админке сайта, и администратор может их включить в статистику, 
+            если посчитает, что анкета была несправедливо отброшена алгоритмом.
+          </div>
+        </div>
+        <div class="mt-2">
+          <div>
+            В админке нет возможности просмотреть авторов анкет. Это сделано специально для конфиденциальности данных. 
+            Убедиться в этом может любой, ведь исходный код проекта открыт: что бэкенд. что фронтенд. 
+            Конечно, автор проекта может включить прямой доступ к БД по IP адресу на портале DigitalOcean, но:
+          </div>
+          <ul>
+            <li>Это менее удобно, чем видеть в админке связку анкета-юзер.</li>
+            <li>Нужен свой лэптоп под рукой.</li>
+            <li>Цель проекта - собрать статистические данные, а не зарплаты конкретных людей.</li>
+          </ul>
+          <div>
+            Для того, чтобы повысить доверие к сервису, я и открыл исходный код, 
+            даю возможность скачать весь пулл данных в CSV, а также пишу и здесь этот текст открыто.
+            Думаю, что разработчики и так в курсе, на что способен другой разработчик с доступом в БД проекта.
+          </div>
         </div>
       </div>
 
