--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -209,7 +209,7 @@
             (filtersReset)="resetGlobalFilters()"
             (shareClicked)="share($event)"
           >
-            ></app-salary-chart-global-filters
+            </app-salary-chart-global-filters
           >
         </div>
 
