--- a/src/app/modules/salaries/components/historical-charts-page/historical-salaries-chart/historical-salaries-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-salaries-chart/historical-salaries-chart.component.html
@@ -1,3 +1,7 @@
+<div class="mb-3">
+  <span class="h4">Изменение медианной и средней зарплат по времени</span>
+</div>
+
 <div id="canvas-historical-chart-container">
   <canvas id="canvas-historical-chart">{{ chart }}</canvas>
 </div>
