--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -40,7 +40,8 @@
           <img
             class="img-fluid"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_1000.png"
-            alt="Main" />
+            alt="Main"
+          />
         </div>
       </div>
     </div>
@@ -67,7 +68,8 @@
           <img
             class="img-fluid"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_1000.png"
-            alt="Main" />
+            alt="Main"
+          />
         </div>
       </div>
     </div>
@@ -92,7 +94,8 @@
           href="https://github.com/orgs/Techinterview-space/repositories"
           class="me-3 mb-2 btn btn-lg btn-outline-dark"
           rel="noopener noreferrer"
-          target="_blank">
+          target="_blank"
+        >
           <i class="bi bi-github me-2"></i>Исходный код</a
         >
 
@@ -100,7 +103,8 @@
           href="https://buymeacoffee.com/maximgorbatyuk"
           rel="noopener noreferrer"
           class="me-3 mb-2 btn btn-lg btn-outline-dark"
-          target="_blank">
+          target="_blank"
+        >
           <i class="bi bi-cup-hot-fill me-2"></i>Buy me a coffee</a
         >
 
@@ -108,7 +112,8 @@
           href="https://boosty.to/ake111aa"
           rel="noopener noreferrer"
           class="me-3 mb-2 btn btn-lg btn-outline-dark"
-          target="_blank">
+          target="_blank"
+        >
           <i class="bi bi-cash-coin me-2"></i>Поддержать на Boosty</a
         >
       </div>
@@ -129,7 +134,8 @@
       <img
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
         alt="Interviewer"
-        class="img-fluid" />
+        class="img-fluid"
+      />
     </div>
   </div>
 </ng-template>
